fixed pagewrap borders and supergutters

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
-.pageWrap {
+#pageWrap {
   margin: 0;
   width: 100%;
-  height: 100%;
+  background-color: white ;
 }
 
