--- a/src/app/components/cwelcome/cwelcome.component.css
+++ b/src/app/components/cwelcome/cwelcome.component.css
@@ -9,11 +9,9 @@
   
 }
 div#codingWrap {
-  /* background-color: #504640; */
   background-color: rgb(255, 255, 255);
-  /* background-image: url('../../../assets/svgs/gridpattern.svg'); */
   background-size: 3px;
-  min-height: 100%;
+  min-height: 100vh;
   max-width: 1200px;
   margin: auto;
   display: grid;
